Update to OkHttp mockwebserver3 5.0.0 (#121)
* Update to OkHttp mockwebserver3 5.0.0

* Fix issues with mockwebserver3 5.0.0

* Change shutdown to close (method was removed)
  in IntegrationTests.
* Need to explicitly start MockWebServer now (no auto-start)
  in KeysTest and IntegrationTests
* Remove unused imports in KeysTest
* Fix deprecated API usage (URL constructor) in KeysTest